# Pipex

./: .gitignore  CMakeLists.txt  Evaluation.docx  Makefile  README.md  input.txt  outfile  output.txt  pipex  temp_Macgrind_Dockerfile
XCode_check/Check_Pipex_XCode/Check_Pipex_XCode/: main.c
XCode_check/Check_Pipex_XCode/Check_Pipex_XCode.xcodeproj/: project.pbxproj
XCode_check/Check_Pipex_XCode/Check_Pipex_XCode.xcodeproj/project.xcworkspace/xcuserdata/arlo.xcuserdatad/: UserInterfaceState.xcuserstate
XCode_check/Check_Pipex_XCode/Check_Pipex_XCode.xcodeproj/xcuserdata/arlo.xcuserdatad/xcschemes/: xcschememanagement.plist
inc/: pipex.h
learning/: Other_pipe.c  initial_pipe.c  pipex.txt  test_header.c  testing.txt  working_path.c
libft/: ft_strtrim.c  ft_substr.c
src/: path_utils.c  pipex.c  pipex_utils.c
